syntax = "proto3";

package server.v1;

option go_package = "war-of-faith/pkg/protobuf/server/v1;serverv1";

import "google/protobuf/wrappers.proto";

message Building {
  Building.Kind kind = 1;
  uint32 level = 2;
  bool is_upgradable = 3;
  uint32 upgrade_time_left = 4;
  Building.UpgradeCost upgrade_cost = 5;

  enum Kind {
    KIND_UNSPECIFIED = 0;
    KIND_HALL = 1;
    KIND_GOLD_MINE = 2;
  }

  message UpgradeCost {
    uint32 gold = 1;
  }
}

message Village {
  uint32 id = 1;
  Village.Resources resources = 2;
  Village.Buildings buildings = 3;

  message Resources {
    uint32 gold = 1;
  }

  message Buildings {
    Building hall = 1;
    Building gold_mine = 2;
  }
}

// GetVillage
message GetVillageRequest {
  google.protobuf.StringValue coords = 1; // x-y
}
message GetVillageResponse {
  Village Village = 1;
}

service Service {
  rpc GetVillage (GetVillageRequest) returns (GetVillageResponse);
}